AM_LDFLAGS=-L/usr/lib/mysql -lmysqlclient

bin_PROGRAMS=osdb
osdb_SOURCES=OSDB.cpp\
 Benchmark.cpp\
 BenchmarkSuite.cpp\
 BenchmarkTest.cpp\
 Configuration.cpp\
 Database.cpp\
 DataPopulator.cpp\
 Logger.cpp\
 SingleUserMode.cpp\
 Timer.cpp\
 tinystr.cpp\
 tinyxml.cpp\
 tinyxmlerror.cpp\
 tinyxmlparser.cpp\
 dbms/MySQLDB.cpp

 
#osdb_SOURCES += $(DBMSSOURCES)

#SUBDIRS = benchmarks dbms